L1F14BSCS0369 - ABDUL KAREEM

--- a/lec 10/index.html
+++ b/lec 10/index.html
@@ -8,10 +8,40 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/animate.css">
 
 </head>
 <body>
 
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1 class="animated bounce">
+                <i class="fas fa-cat"></i>
+                    Drive your Car</h1>
+        </div>
+
+        <!--<div class="col col-3 col-sm-3 col-md-4 col-lg-2">
+            col 1
+        </div>
+
+        <div class="col col-6 col-sm-3 col-md-2 col-lg-2">
+            col 2
+        </div>
+
+        <div class="col col-6 col-sm-6 col-md-4 col-lg-2">
+            col 3
+        </div>
+
+
+            <div class="col col-3 col-md-2 col-lg-2">
+            Other
+        </div>
+-->
+    </div>
+
+</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
