--- a/lec 13/index.html
+++ b/lec 13/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Javascript</title>
+    <title>Facebook</title>
 </head>
 <body>
-<h1>Welcome Javascript</h1>
+<h1>Welcome to Facebook</h1>
+<script src="script.js"> 
+	
+</script>
 </body>
 </html>
